--- a/src/app/modules/wallet/components/tokens/skale/community-pool/community-pool.component.html
+++ b/src/app/modules/wallet/components/tokens/skale/community-pool/community-pool.component.html
@@ -1,6 +1,13 @@
 <div class="m-skaleCommunityPool__container" [formGroup]="form">
   <div class="m-skaleBridge__amountContainer">
-    <span class="m-skaleBridge__inputLabel">Deposit ETH to fund exits</span>
+    <span class="m-skaleBridge__inputLabel">
+      Fund Exits
+      <m-tooltip class="m-skaleBridge__info" icon="help">
+        To fund exits from the SKALE chain to the mainnet, ETH must be used from
+        a users Community Pool balance. You can deposit funds here to add to
+        your Community Pool balance, and withdraw as you like.
+      </m-tooltip>
+    </span>
     <input
       type="number"
       class="m-input"
