--- a/src/app/modules/wallet/components/tokens/balance/balance-tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/balance/balance-tokens.component.html
@@ -68,10 +68,13 @@
 
       <m-walletTokens__dropdownMenu></m-walletTokens__dropdownMenu>
     </div>
-    <div
+    <!-- <div
       class="m-wallet__balance__rightContainer"
       *ngIf="shouldShowNetworkSwitcher()"
     >
+      <m-walletNetworkSwitcher></m-walletNetworkSwitcher>
+    </div> -->
+    <div class="m-wallet__balance__rightContainer">
       <m-walletNetworkSwitcher></m-walletNetworkSwitcher>
     </div>
   </ng-container>
