(fix): Added change to the modals v2 scss file as main.css in gitignore

--- a/src/app/modules/modals/v2/modal-v2.component.scss
+++ b/src/app/modules/modals/v2/modal-v2.component.scss
@@ -57,6 +57,7 @@
   margin: 20px 0;
   border-radius: 4px;
   box-sizing: border-box;
+  max-height: -webkit-fill-available;
 
   @include m-theme() {
     background-color: themed($m-bgColor--primary);
