--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -57,6 +57,8 @@
       </m-feedGrid>
     </div>
 
+    <!-- ojm remove This -->
+    <m-contentSettings__modal></m-contentSettings__modal>
     <!-- ----------------------------------------- -->
     <!-- LAYOUT : LIST  -->
     <!-- ----------------------------------------- -->
