--- a/src/app/modules/discovery/settings-button/settings-button.component.html
+++ b/src/app/modules/discovery/settings-button/settings-button.component.html
@@ -6,6 +6,8 @@
       ? 'discover-by-tags-settings-button'
       : modalType === 'feed'
       ? 'discovery-feeds-settings-button'
+      : modalType === 'content-settings'
+      ? 'content-settings-button'
       : null
   "
   (click)="openSettingsModal($event)"
@@ -20,6 +22,9 @@
       ngSwitchCase="tags"
       i18n="@@DISCOVERY_SETTINGS_BUTTON__MANAGE_TAGS"
       >Manage tags</ng-template
+    >
+    <ng-template ngSwitchCase="content-settings" i18n="@@COMMON__SETTINGS"
+      >Settings</ng-template
     >
   </ng-container>
 </m-tooltip>
