--- a/src/app/modules/tag-settings/tag-settings/tag-settings.component.html
+++ b/src/app/modules/tag-settings/tag-settings/tag-settings.component.html
@@ -1,13 +1,18 @@
-<m-hashtags__typeaheadInput
-  class="m-tagSettings__section m-formWrapper"
-  placeholder="Search tags"
-  historyKey="content-settings"
-  (onAction)="onAddInput($event)"
-  #hashtagsTypeaheadInput
-></m-hashtags__typeaheadInput>
-<m-tagSelector
-  class="m-tagSettings__section"
-  [tags]="discoveryTagsService.userAndDefault$ | async"
-  (onAdd)="onAdd($event)"
-  (onRemove)="onRemove($event)"
-></m-tagSelector>
+<m-loadingSpinner
+  [inProgress]="discoveryTagsService.inProgress$ | async"
+></m-loadingSpinner>
+<ng-container *ngIf="!(discoveryTagsService.inProgress$ | async)">
+  <m-hashtags__typeaheadInput
+    class="m-tagSettings__section m-formWrapper"
+    placeholder="Search tags"
+    historyKey="content-settings"
+    (onAction)="onAddInput($event)"
+    #hashtagsTypeaheadInput
+  ></m-hashtags__typeaheadInput>
+  <m-tagSelector
+    class="m-tagSettings__section"
+    [tags]="discoveryTagsService.userAndDefault$ | async"
+    (onAdd)="onAdd($event)"
+    (onRemove)="onRemove($event)"
+  ></m-tagSelector>
+</ng-container>
