Testing and refactoring

--- a/src/app/modules/default-feed/container.component.html
+++ b/src/app/modules/default-feed/container.component.html
@@ -13,7 +13,10 @@
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
         <m-discovery__disclaimer></m-discovery__disclaimer>
-        <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
+        <m-suggestions__sidebar
+          type="user"
+          customTitle="popular_channels"
+        ></m-suggestions__sidebar>
       </div>
     </div>
   </div>
