--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
@@ -67,7 +67,12 @@
   ></minds-button-comment>
 
   <!-- Show wire if not own post -->
-  <ng-container *ngIf="session.getLoggedInUser().guid != entity.ownerObj.guid">
+  <ng-container
+    *ngIf="
+      session.getLoggedInUser() &&
+      session.getLoggedInUser().guid != entity.ownerObj.guid
+    "
+  >
     <div class="m-layout__spacer"></div>
 
     <m-wire-button [object]="entity"></m-wire-button>
