We don't need slot logic here as there is no boost rotator

--- a/src/app/modules/default-feed/feed/feed.component.html
+++ b/src/app/modules/default-feed/feed/feed.component.html
@@ -1,12 +1,11 @@
 <div class="m-defaultFeed__feed">
   <m-activity
-    *ngFor="let activity$ of feedsService.feed | async; let i = index"
+    *ngFor="let activity$ of feedsService.feed | async"
     [entity]="activity$ | async"
     [displayOptions]="{
       showComments: true,
       isFeed: true
     }"
-    [slot]="i + 1"
     class="m-defaultFeed__activity"
   ></m-activity>
 
