--- a/src/app/modules/compass/questionnaire-banner/questionnaire-banner.component.html
+++ b/src/app/modules/compass/questionnaire-banner/questionnaire-banner.component.html
@@ -6,10 +6,10 @@
     <div class="m-compassQuestionnaireBanner__contentWrapper">
       <div class="m-compassQuestionnaireBanner__textWrapper">
         <span class="m-compassQuestionnaireBanner__title"
-          >Help improve Minds</span
+          >Build your algorithm</span
         >
         <span class="m-compassQuestionnaireBanner__subtitle"
-          >Complete this short user questionnaire</span
+          >Set your echo chamber preferences</span
         >
       </div>
       <div class="m-compassQuestionnaireBanner__buttonWrapper">
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="m-compassQuestionnaireBanner__dismiss">
-      <i class="material-icons" (click)="dismiss()">close</i>
+      <i class="material-icons" (click)="dismiss()">Start</i>
     </div>
   </div>
 </ng-container>
