--- a/src/app/modules/compass/questionnaire-modal/questionnaire-modal.component.html
+++ b/src/app/modules/compass/questionnaire-modal/questionnaire-modal.component.html
@@ -3,16 +3,15 @@
   data-cy="social-compass-questionnaire-modal"
 >
   <div class="m-compassQuestionnaireModal__main">
-    <span class="m-compassQuestionnaireModal__title">Help improve Minds</span>
+    <span class="m-compassQuestionnaireModal__title">Build your algorithm</span>
     <span class="m-compassQuestionnaireModal__subtitle"
-      >As part of an ongoing effort to better deliver engaging and relevant
-      content to our users, please take a moment to complete this short
-      questionnaire.</span
+      >The preferences you set will improve your feed over time as the open
+      source machine learning monkeys evolve.</span
     >
     <!-- TODO: Add more information link  -->
     <m-compassForm></m-compassForm>
   </div>
   <div class="m-compassQuestionnaireModal__toolbar">
-    <m-button color="blue" (onAction)="submit($event)">Complete</m-button>
+    <m-button color="blue" (onAction)="submit($event)">Save</m-button>
   </div>
 </div>
