Various changes to make site respond to network changes automatically

--- a/src/app/modules/wallet/components/network-swap-bridge/skale/skale.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/skale/skale.component.html
@@ -1,7 +1,7 @@
 <div class="m-skale__subTabs">
   <button
     class="m-skale__subTab"
-    *ngFor="let tab of subTabs$ | async"
+    *ngFor="let tab of subTabs"
     [ngClass]="{
       'm-skale__subTab--active': (activeSubTab$ | async) === tab
     }"
