--- a/src/app/modules/wallet/components/network-swap-bridge/network-swap-bridge-modal.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/network-swap-bridge-modal.component.html
@@ -15,10 +15,11 @@
       </button>
     </div>
   </div>
-  <div class="m-networkSwapBridge__body">
+  <div class="m-networkSwapBridge__body" *ngIf="!(inProgress$ | async)">
     <m-wallet__skale
       *ngIf="(selectedNetworkSiteName$ | async) === 'SKALE'"
     ></m-wallet__skale>
     <!-- Add templates for other swap modals here -->
   </div>
+  <m-loadingSpinner [inProgress]="inProgress$ | async"></m-loadingSpinner>
 </div>
