add tooltip prompt

--- a/src/app/common/components/tooltip/tooltip.component.scss
+++ b/src/app/common/components/tooltip/tooltip.component.scss
@@ -28,6 +28,10 @@ m-tooltip {
     line-height: 1.2em;
   }
 
+  &.m-tooltip--bubble--anchor-top {
+    top: 35px !important;
+  }
+
   &.m-tooltip--bubble--anchor-bottom {
     bottom: 24px;
   }
@@ -58,5 +62,9 @@ m-tooltip {
 
   @include m-theme() {
     background: $blue;
+  }
+
+  &.m-tooltip__triangle--top {
+    top: -5px;
   }
 }
