--- a/src/app/common/components/tooltip/tooltip.component.html
+++ b/src/app/common/components/tooltip/tooltip.component.html
@@ -1,8 +1,8 @@
 <div class="m-tooltip" [class.m-tooltip--anchored]="!!anchor">
   <i *ngIf="icon && !iconSrc" class="material-icons" [ngClass]="iconClass">{{
     icon
-  }}</i>
-  <img *ngIf="iconSrc && !icon" [src]="cdnAssetsUrl + iconSrc" />
+    }}</i>
+  <img *ngIf="iconSrc && !icon" [src]="cdnAssetsUrl + iconSrc"/>
   <ng-content select="[m-tooltip--icon]"></ng-content>
   <ng-content select="[m-tooltip--anchor]"></ng-content>
 
@@ -12,6 +12,9 @@
     [style.top.px]="useParentPosition ? offsetTop : false"
     [style.right.px]="useParentPosition ? offsetRight : false"
     [style.left.px]="useParentPosition ? offsetLeft : false"
+    [class.m-tooltip--bubble--anchor-top]="
+      !useParentPosition && anchor == 'top'
+    "
     [class.m-tooltip--bubble--anchor-bottom]="
       !useParentPosition && anchor == 'bottom'
     "
@@ -26,6 +29,7 @@
     <div
       *ngIf="showArrow"
       class="m-tooltip__triangle"
+      [class.m-tooltip__triangle--top]="anchor === 'top'"
       [style.right.px]="
         anchor === 'top' || anchor === 'bottom' ? triangleOffset : undefined
       "
