(chore): Amended text for button and restored icon

--- a/src/app/modules/compass/questionnaire-banner/questionnaire-banner.component.html
+++ b/src/app/modules/compass/questionnaire-banner/questionnaire-banner.component.html
@@ -17,12 +17,12 @@
           data-cy="social-compass-questionnaire-banner-button"
           [color]="'blue'"
           (onAction)="openModal()"
-          >Questionnaire</m-button
+          >Start</m-button
         >
       </div>
     </div>
     <div class="m-compassQuestionnaireBanner__dismiss">
-      <i class="material-icons" (click)="dismiss()">Start</i>
+      <i class="material-icons" (click)="dismiss()">close</i>
     </div>
   </div>
 </ng-container>
