add support for experiments and feature flags

--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -19,7 +19,7 @@
       ></m-composer>
     </ng-container>
 
-    <div class="m-newsfeed__subscribed__feedType">
+    <div *ngIf="topFeedExperiment.isActive()" class="m-newsfeed__subscribed__feedType">
       <span
         i18n="@@MINDS__NEWSFEED__TOP_POSTS__TITLE"
         *ngIf="algorithm === 'top'"
